--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -1,3 +1,4 @@
 {
-  "title": "Airportmap – Flughäfen, Wetterdaten, Live-Traffic und mehr"
+  "title": "Airportmap",
+  "description": "Die kostenlose und quelloffene Flughafendatenbank"
 }
