--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -1,3 +1,4 @@
 {
-  "title": "Airportmap – Airports, weather, live traffic and more"
+  "title": "Airportmap",
+  "description": "The free and open source airport database"
 }
