--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -1,4 +1,5 @@
 {
-  "title": "Airportmap",
-  "description": "Die kostenlose und quelloffene Flughafendatenbank"
+  "description": "Die kostenlose und quelloffene Flughafendatenbank",
+  "name": "Airportmap",
+  "title": "Airportmap"
 }
