--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -1,4 +1,5 @@
 {
-  "title": "Airportmap",
-  "description": "The free and open source airport database"
+  "description": "The free and open source airport database",
+  "name": "Airportmap",
+  "title": "Airportmap"
 }
