--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -1,5 +1,8 @@
 {
+  "dasher": "Anpassen",
   "description": "Die kostenlose und quelloffene Flughafendatenbank",
+  "menu": "Menü",
   "name": "Airportmap",
+  "search": "Suchen",
   "title": "Airportmap"
 }
