--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -1,5 +1,5 @@
 {
-  "dasher": "Anpassen",
+  "dasher": "Dashboard",
   "description": "Die kostenlose und quelloffene Flughafendatenbank",
   "menu": "Menü",
   "name": "Airportmap",
