--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -4,5 +4,9 @@
   "menu": "Menü",
   "name": "Airportmap",
   "search": "Suchen",
+  "theme": "Farbschema",
+  "theme.dark": "Dunkel",
+  "theme.light": "Hell",
   "title": "Airportmap"
 }
+
