--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -4,5 +4,9 @@
   "menu": "Menu",
   "name": "Airportmap",
   "search": "Search",
+  "theme": "Theme",
+  "theme.dark": "Dark Mode",
+  "theme.light": "Light Mode",
   "title": "Airportmap"
 }
+
