--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -1,6 +1,12 @@
 {
+  "dasher": "",
+  "description": "",
+  "menu": "",
+  "name": "",
+  "search": "",
   "theme": "",
   "theme.dark": "",
-  "theme.light": ""
+  "theme.light": "",
+  "title": ""
 }
 
