--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -1,6 +1,7 @@
 {
   "dasher": "Dashboard",
   "description": "Die kostenlose und quelloffene Flughafendatenbank",
+  "locale": "Sprache",
   "menu": "Menü",
   "name": "Airportmap",
   "search": "Suchen",
