--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -13,6 +13,9 @@
   "theme.dark": "",
   "theme.light": "",
   "title": "",
-  "twitter": ""
+  "twitter": "",
+  "units": "",
+  "units.imperial": "",
+  "units.metric": ""
 }
 
