--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -14,8 +14,7 @@
   "theme.light": "Hell",
   "title": "Airportmap",
   "twitter": "Twitter/X",
-  "units": "Einheitensystem",
+  "units": "Einheiten",
   "units.imperial": "Imperial",
   "units.metric": "Metrisch"
 }
-
