--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -1,5 +1,6 @@
 {
-  "description": "The free and open source airport database",
-  "title": "Airportmap"
+  "name": "Airportmap",
+  "slogan": "The free and open source airport database",
+  "title": "{{title}} — Airportmap"
 }
 
