--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -1,4 +1,8 @@
 {
+  "header.action.search": "Suchen",
+  "header.action.sidepanel": "Menü öffnen",
+  "header.action.theme": "Farbschema wechseln",
+  "header.action.translate": "Sprache wählen",
   "name": "Airportmap",
   "slogan": "Die freie Flughafen-Datenbank",
   "title": "{{title}} — Airportmap"
