--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -1,2 +1,10 @@
-{}
+{
+  "header.action.search": "",
+  "header.action.sidepanel": "",
+  "header.action.theme": "",
+  "header.action.translate": "",
+  "name": "",
+  "slogan": "",
+  "title": ""
+}
 
