--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -4,6 +4,7 @@
   "header.action.theme": "",
   "header.action.translate": "",
   "name": "",
+  "search.close": "",
   "search.placeholder": "",
   "slogan": "",
   "title": ""
