--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -1,11 +1,12 @@
 {
+  "close": "Close",
   "header.action.search": "Search",
   "header.action.sidepanel": "Open sidepanel",
   "header.action.theme": "Toggle theme",
   "header.action.translate": "Translate",
   "name": "Airportmap",
-  "search.close": "Close",
   "search.placeholder": "Search airports, IATA/ICAO codes …",
+  "sidepanel.title": "Navigation & Preferences",
   "slogan": "The free and open source airport database",
   "title": "{{title}} — Airportmap"
 }
