--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -6,6 +6,9 @@
   "header.action.translate": "",
   "name": "",
   "search.placeholder": "",
+  "sidepanel.links": "",
+  "sidepanel.navigation": "",
+  "sidepanel.preferences": "",
   "sidepanel.title": "",
   "slogan": "",
   "title": ""
