--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -1,5 +1,11 @@
 {
   "close": "",
+  "external.apidocs": "",
+  "external.database": "",
+  "external.editor": "",
+  "external.embed": "",
+  "external.github": "",
+  "external.twitter": "",
   "header.action.search": "",
   "header.action.sidepanel": "",
   "header.action.theme": "",
