--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -11,6 +11,12 @@
   "header.action.theme": "",
   "header.action.translate": "",
   "name": "",
+  "nav.about": "",
+  "nav.airports": "",
+  "nav.home": "",
+  "nav.sigmet": "",
+  "nav.stats": "",
+  "nav.traffic": "",
   "search.placeholder": "",
   "sidepanel.links": "",
   "sidepanel.navigation": "",
