--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -11,6 +11,12 @@
   "header.action.theme": "Farbschema wechseln",
   "header.action.translate": "Sprache wählen",
   "name": "Airportmap",
+  "nav.about": "Über Airportmap",
+  "nav.airports": "Flughäfen A-Z",
+  "nav.home": "Airportmap erkunden",
+  "nav.sigmet": "Aktive Sigmets",
+  "nav.stats": "Flughafen-Statistik",
+  "nav.traffic": "Echtzeit-Luftverkehr",
   "search.placeholder": "Suche nach Flughäfen, IATA/ICAO Codes …",
   "sidepanel.links": "Externe Links",
   "sidepanel.navigation": "Inhalte",
