--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -11,6 +11,12 @@
   "header.action.theme": "Toggle theme",
   "header.action.translate": "Translate",
   "name": "Airportmap",
+  "nav.about": "About Airportmap",
+  "nav.airports": "Airports A-Z",
+  "nav.home": "Explore Airportmap",
+  "nav.sigmet": "Active Sigmets",
+  "nav.stats": "Airport Statistics",
+  "nav.traffic": "Live Traffic",
   "search.placeholder": "Search airports, IATA/ICAO codes …",
   "sidepanel.links": "Resources & Links",
   "sidepanel.navigation": "Navigation",
