--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -17,6 +17,7 @@
   "nav.sigmet": "",
   "nav.stats": "",
   "nav.traffic": "",
+  "nav.weather": "",
   "search.placeholder": "",
   "sidepanel.links": "",
   "sidepanel.navigation": "",
