--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -17,6 +17,7 @@
   "nav.sigmet": "Aktive Sigmets",
   "nav.stats": "Flughafen-Statistik",
   "nav.traffic": "Echtzeit-Luftverkehr",
+  "nav.weather": "Wetterstationen",
   "search.placeholder": "Suche nach Flughäfen, IATA/ICAO Codes …",
   "sidepanel.links": "Externe Links",
   "sidepanel.navigation": "Inhalte",
