--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -17,6 +17,7 @@
   "nav.sigmet": "Active Sigmets",
   "nav.stats": "Airport Statistics",
   "nav.traffic": "Live Traffic",
+  "nav.weather": "Weather Stations",
   "search.placeholder": "Search airports, IATA/ICAO codes …",
   "sidepanel.links": "Resources & Links",
   "sidepanel.navigation": "Navigation",
