--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -14,7 +14,7 @@
   "nav.about": "",
   "nav.airports": "",
   "nav.home": "",
-  "nav.sigmet": "",
+  "nav.sigmets": "",
   "nav.stats": "",
   "nav.traffic": "",
   "nav.weather": "",
