--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -14,7 +14,7 @@
   "nav.about": "Über Airportmap",
   "nav.airports": "Flughäfen A-Z",
   "nav.home": "Airportmap erkunden",
-  "nav.sigmet": "Aktive Sigmets",
+  "nav.sigmets": "Aktive Sigmets",
   "nav.stats": "Flughafen-Statistik",
   "nav.traffic": "Echtzeit-Luftverkehr",
   "nav.weather": "Wetterstationen",
