--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -14,7 +14,7 @@
   "nav.about": "About Airportmap",
   "nav.airports": "Airports A-Z",
   "nav.home": "Explore Airportmap",
-  "nav.sigmet": "Active Sigmets",
+  "nav.sigmets": "Active Sigmets",
   "nav.stats": "Airport Statistics",
   "nav.traffic": "Live Traffic",
   "nav.weather": "Weather Stations",
