--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -19,6 +19,10 @@
   "nav.traffic": "",
   "nav.weather": "",
   "search.placeholder": "",
+  "settings.units.desc": "",
+  "settings.units.imperial": "",
+  "settings.units.metric": "",
+  "settings.units.title": "",
   "sidepanel.links": "",
   "sidepanel.navigation": "",
   "sidepanel.preferences": "",
