--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -19,6 +19,10 @@
   "nav.traffic": "Live Traffic",
   "nav.weather": "Weather Stations",
   "search.placeholder": "Search airports, IATA/ICAO codes …",
+  "settings.units.desc": "Choose your preferred measurement units",
+  "settings.units.imperial": "Imperial",
+  "settings.units.metric": "Metric",
+  "settings.units.title": "Units System",
   "sidepanel.links": "Resources & Links",
   "sidepanel.navigation": "Navigation",
   "sidepanel.preferences": "Preferences",
