--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -19,6 +19,10 @@
   "nav.traffic": "Echtzeit-Luftverkehr",
   "nav.weather": "Wetterstationen",
   "search.placeholder": "Suche nach Flughäfen, IATA/ICAO Codes …",
+  "settings.units.desc": "Wähle die bevorzugten Maßeinheiten",
+  "settings.units.imperial": "Imperial",
+  "settings.units.metric": "Metrisch",
+  "settings.units.title": "Einheitensystem",
   "sidepanel.links": "Externe Links",
   "sidepanel.navigation": "Inhalte",
   "sidepanel.preferences": "Einstellungen",
