--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -21,8 +21,8 @@
   "search.placeholder": "",
   "settings.units.desc": "",
   "settings.units.imperial": "",
+  "settings.units.label": "",
   "settings.units.metric": "",
-  "settings.units.title": "",
   "sidepanel.links": "",
   "sidepanel.navigation": "",
   "sidepanel.preferences": "",
