--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -21,8 +21,8 @@
   "search.placeholder": "Suche nach Flughäfen, IATA/ICAO Codes …",
   "settings.units.desc": "Wähle die bevorzugten Maßeinheiten",
   "settings.units.imperial": "Imperial",
+  "settings.units.label": "Einheitensystem",
   "settings.units.metric": "Metrisch",
-  "settings.units.title": "Einheitensystem",
   "sidepanel.links": "Externe Links",
   "sidepanel.navigation": "Inhalte",
   "sidepanel.preferences": "Einstellungen",
