--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -21,8 +21,8 @@
   "search.placeholder": "Search airports, IATA/ICAO codes …",
   "settings.units.desc": "Choose your preferred measurement units",
   "settings.units.imperial": "Imperial",
+  "settings.units.label": "Units System",
   "settings.units.metric": "Metric",
-  "settings.units.title": "Units System",
   "sidepanel.links": "Resources & Links",
   "sidepanel.navigation": "Navigation",
   "sidepanel.preferences": "Preferences",
