--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -12,6 +12,10 @@
   "header.action.sidepanel": "",
   "header.action.theme": "",
   "header.action.translate": "",
+  "legal.cookies": "",
+  "legal.license": "",
+  "legal.privacy": "",
+  "legal.terms": "",
   "name": "",
   "nav.about": "",
   "nav.airports": "",
