--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -12,6 +12,10 @@
   "header.action.sidepanel": "Menü öffnen",
   "header.action.theme": "Farbschema wechseln",
   "header.action.translate": "Sprache wählen",
+  "legal.cookies": "Cookie-Richtlinie",
+  "legal.license": "Lizenzen",
+  "legal.privacy": "Datenschutzrichtlinie",
+  "legal.terms": "Nutzungsbedingungen",
   "name": "Airportmap",
   "nav.about": "Über Airportmap",
   "nav.airports": "Flughäfen A-Z",
