--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -12,6 +12,10 @@
   "header.action.sidepanel": "Open sidepanel",
   "header.action.theme": "Toggle theme",
   "header.action.translate": "Translate",
+  "legal.cookies": "Cookie Policy",
+  "legal.license": "Licenses",
+  "legal.privacy": "Privacy Policy",
+  "legal.terms": "Terms of Service",
   "name": "Airportmap",
   "nav.about": "About Airportmap",
   "nav.airports": "Airports A-Z",
