--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -24,6 +24,7 @@
   "nav.stats": "",
   "nav.traffic": "",
   "nav.weather": "",
+  "notice": "",
   "search.placeholder": "",
   "settings.units.desc": "",
   "settings.units.imperial": "",
