--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -24,6 +24,7 @@
   "nav.stats": "Flughafen-Statistik",
   "nav.traffic": "Echtzeit-Luftverkehr",
   "nav.weather": "Wetterstationen",
+  "notice": "Informationen auf dieser Website sind ausschließlich für private Nutzung bestimmt. Nicht für reale Fliegerei verwenden.",
   "search.placeholder": "Suche nach Flughäfen, IATA/ICAO Codes …",
   "settings.units.desc": "Wähle die bevorzugten Maßeinheiten",
   "settings.units.imperial": "Imperial",
