--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -24,6 +24,7 @@
   "nav.stats": "Airport Statistics",
   "nav.traffic": "Live Traffic",
   "nav.weather": "Weather Stations",
+  "notice": "Information on this website is for private use only. Do not use for real life flight.",
   "search.placeholder": "Search airports, IATA/ICAO codes …",
   "settings.units.desc": "Choose your preferred measurement units",
   "settings.units.imperial": "Imperial",
