--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -7,6 +7,7 @@
   "external.editor": "",
   "external.embed": "",
   "external.github": "",
+  "external.support": "",
   "external.twitter": "",
   "header.action.search": "",
   "header.action.sidepanel": "",
