--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -7,6 +7,7 @@
   "external.editor": "Editor",
   "external.embed": "Einbetten",
   "external.github": "GitHub",
+  "external.support": "Support",
   "external.twitter": "Twitter / X",
   "header.action.search": "Suchen",
   "header.action.sidepanel": "Menü öffnen",
