--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -7,6 +7,7 @@
   "external.editor": "Editor",
   "external.embed": "Embed",
   "external.github": "GitHub",
+  "external.support": "Support",
   "external.twitter": "Twitter / X",
   "header.action.search": "Search",
   "header.action.sidepanel": "Open sidepanel",
