--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -9,6 +9,9 @@
   "external.github": "",
   "external.support": "",
   "external.twitter": "",
+  "footer.development": "",
+  "footer.explore": "",
+  "footer.support": "",
   "header.action.search": "",
   "header.action.sidepanel": "",
   "header.action.theme": "",
