--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -9,6 +9,9 @@
   "external.github": "GitHub",
   "external.support": "Support",
   "external.twitter": "Twitter / X",
+  "footer.development": "Entwickler",
+  "footer.explore": "Erkunden",
+  "footer.support": "Unterstützen",
   "header.action.search": "Suchen",
   "header.action.sidepanel": "Menü öffnen",
   "header.action.theme": "Farbschema wechseln",
