--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -9,6 +9,9 @@
   "external.github": "GitHub",
   "external.support": "Support",
   "external.twitter": "Twitter / X",
+  "footer.development": "Developers",
+  "footer.explore": "Discover",
+  "footer.support": "Support",
   "header.action.search": "Search",
   "header.action.sidepanel": "Open sidepanel",
   "header.action.theme": "Toggle theme",
