--- a/_schema/app.generic.json
+++ b/_schema/app.generic.json
@@ -3,10 +3,13 @@
   "credits": "",
   "desc": "",
   "external.apidocs": "",
+  "external.bug": "",
+  "external.contact": "",
   "external.database": "",
   "external.editor": "",
   "external.embed": "",
   "external.github": "",
+  "external.status": "",
   "external.support": "",
   "external.twitter": "",
   "footer.development": "",
