--- a/de-DE/app.generic.json
+++ b/de-DE/app.generic.json
@@ -3,10 +3,13 @@
   "credits": "© {{year}} Airportmap. Mit ❤️ für Luftfahrtbegeisterte entwickelt.",
   "desc": "Umfassendes Open-Source-Projekt für Flughäfen, Wetterdaten und Live-Flugverkehr. Entdecke mehr als 75.000 Flughäfen, Heliports und Luftwaffenstützpunkte weltweit.",
   "external.apidocs": "API Hilfe",
+  "external.bug": "Fehler melden",
+  "external.contact": "Kontaktieren",
   "external.database": "Datenbank",
   "external.editor": "Editor",
   "external.embed": "Einbetten",
   "external.github": "GitHub",
+  "external.status": "Status",
   "external.support": "Support",
   "external.twitter": "Twitter / X",
   "footer.development": "Entwickler",
