--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -3,10 +3,13 @@
   "credits": "© {{year}} Airportmap. Built with ❤️ for aviation enthusiasts worldwide.",
   "desc": "Comprehensive open source project for airports, weather data and live traffic. Explore more than 75’000 airports, heliports and air bases worldwide.",
   "external.apidocs": "API Docs",
+  "external.bug": "Bug Reports",
+  "external.contact": "Contact Airportmap",
   "external.database": "Database",
   "external.editor": "Editor",
   "external.embed": "Embed",
   "external.github": "GitHub",
+  "external.status": "Status Page",
   "external.support": "Support",
   "external.twitter": "Twitter / X",
   "footer.development": "Developers",
