--- a/en-US/app.generic.json
+++ b/en-US/app.generic.json
@@ -4,7 +4,7 @@
   "desc": "Comprehensive open source project for airports, weather data and live traffic. Explore more than 75’000 airports, heliports and air bases worldwide.",
   "external.apidocs": "API Docs",
   "external.bug": "Bug Reports",
-  "external.contact": "Contact Airportmap",
+  "external.contact": "Contact Us",
   "external.database": "Database",
   "external.editor": "Editor",
   "external.embed": "Embed",
